@@ -10,21 +10,12 @@
 # free for non commercial use with author credits
 #
 
-import re,sys,os,time,requests,traceback
-try:
-	sys.path.append( os.path.dirname(__file__) )
-except:
-	pass
-
-import threading
 from datetime import date, timedelta, datetime
 from Plugins.Extensions.archivCZSK.engine import client
-
 from Plugins.Extensions.archivCZSK.archivczsk import ArchivCZSK
 
-from orangetv import OrangeTVcache
-import util
-from provider import ContentProvider
+from .orangetv import OrangeTVcache
+from tools_xbmc.contentprovider.provider import ContentProvider
 
 try:
 	from urllib import quote
