@@ -1,3 +1,5 @@
+2023-01-27
+* konverzia na modul pre archivCZSK >=1.7.0
 2022-12-15
 * drobné opravy
 2022-12-01
